@@ -45,6 +45,9 @@ public:
 
 	std::string identifier () const;
 	
+	/* VideoContent */
+	void set_default_colour_conversion ();
+	
 	void set_video_length (VideoContent::Frame);
 	bool still () const;
 	void set_video_frame_rate (float);
