@@ -1,3 +1,8 @@
+2015-05-21  Carl Hetherington  <cth@carlh.net>
+
+	* Try to set up useful default colour conversions
+	depending on the type and resolution of content (#565).
+
 2015-05-20  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.79.3 released.
